# Meteo-Rain-Precipitation-API

./: .gitignore  Dockerfile  README.md  github.txt  pyproject.toml  requirements.txt
app/: app.py  main.py  utils.py
models/rain_or_not/: best_xgboost_classifier.joblib
