[project]
name = "meteo-rain-precipitation-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Shashikanth",email = "shashikanth1110@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "meteo_rain_precipitation_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
