[project]
name = "meteo-rain-precipitation-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Shashikanth",email = "shashikanth1110@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "scikit-learn (==1.5.1)",
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.1)",
    "joblib (==1.4.2)",
    "xgboost (>=3.0.5,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "meteo_rain_precipitation_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
